client/src/stylesheets/gamedashboard/top/Phase.scss
.phase-component {
  @include expand;
  @include make-column-and-center;
  justify-content: space-around;
  text-align: center;

  p {
    margin: 0;
  }

  .title {
    font-size: $font-large;
    color: $space-orange;
  }

  .current {
    font-size: $font-med;
    color: $space-white;
  }

  .buttons {
    margin-top: 0.75rem;
    @include make-column-and-center;

    .donebtn {
      @include reset-button;
      height: 2rem;
      width: 6rem;
      padding: 0.125rem;
      margin-bottom: 0.75rem;
      border: 0.0625rem solid $space-white;
      font-size: 0.75rem;
      color: $space-white;
      @include default-transition-base;

      &:hover {
        color: $space-gray;
        background-color: $space-white;
      }

      &:disabled {
        opacity: 50%;
      }

      &:disabled:hover {
        color: $space-white;
        background-color: $space-gray;
      }
    }

    .cancelbtn {
      color: $space-orange;
      @include default-transition-base;
      cursor: pointer;

      &:hover {
        @include default-scale-up;
      }
    }
  }
  

  .transition{
    transition: all 0.4s ease-in-out;
  }

  .round-info-modal{
    color:$space-white;
    transition: all 0.2s ease-in-out;
    text-align: center;
    opacity: 0%;
  }

  .time {
    font-size: $font-large;
    
    color: $space-orange;

    span {
      color: $space-white;
    }
  }
}

.current:hover ~ .round-info-modal{
  opacity: 100%;
} 

.title:hover ~ .round-info-modal{
  opacity: 100%;
}

.blink-timer{
  animation: blinker 0.5s linear 5;
  font-size: 3rem;
  color: $status-red;
}


@keyframes blinker {
  50% {
    opacity: 0;
  }
}

